# Sweep-AutoSplit

./: .gitignore  README.md  config.yaml  convert_bag2lerobot21_dualarm.py  pi_sweep_segment_recipe.md  pyproject.toml  requirements.txt  setup.py  test_av1_frame_extraction.py  test_mask_generation.py  upload_to_hf.py
sweep_auto_split/: __init__.py  action_detector.py  config.py  data_loader.py  diagnostics.py  kinematics.py  lerobot_exporter.py  main.py  mask_generator.py  segment_calculator.py  signal_processing.py  sweep_detector.py  visual_checker.py  visualization.py  visualize_sweep.py
